--- a/angular.json
+++ b/angular.json
@@ -84,12 +84,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a0ac16a6-c92c-4f6e-b7df-5b30c8fc3c63"
   }
 }
